# ric

./: .gitignore  cython_hello.c  cython_hello.pyx  make  multi.py  pyproject.toml  readme.md  requirements.txt  ric.c  ric.pyx  run.py  run_test.py  setup.py  sweep.py  test_hello.py
src/: elo.c  eval.c  glicko.c  metrics.c  multi.c  ric.h  trueskill.c
